syntax = "proto3";
package cheetah.matches.realtime.admin;
option csharp_namespace = "Games.Cheetah.GRPC.Admin";

import public "shared.proto";
/**
 Общие команды для получения информации и управления сервером
 */
service Admin {
  /**
  Получить список комнат
 */
  rpc GetRooms(GetRoomsRequest) returns(GetRoomsResponse);
}

message GetRoomsRequest {

}

message GetRoomsResponse {
  repeated uint64 rooms = 1;
}

/**
 Получения состояния комнаты для отладки
 */
service Dump {
  rpc Dump(DumpRequest) returns(DumpResponse);
}

message DumpRequest {
  uint64 room = 1;
}

message DumpResponse {
  repeated DumpUser users = 1;
  repeated DumpObject objects = 2;
}

message  DumpUser {
  uint32 id = 1;
  uint64 groups = 2;
  bool attached = 3;
}


message DumpObject {
  uint32 id = 1;
  uint64 groups = 2;
  uint32 template = 3;
  bool created = 4;
  optional uint32 owner_user_id = 5;
  repeated cheetah.matches.realtime.shared.GameObjectField fields = 6;
}
